@@ -2,6 +2,8 @@
 v6.0.5-git
 ----------
 
+[mms] Use Horde_Css_Parser package, which is compatible with CSS3 declarations,
+      instead of the unmaintained Horde_Text_Filter_Csstidy code.
 [mms] Fix verifying signed & encrypted PGP messages (Bug #12100).
 [mms] Update virtual folder name in folder tree when editing the label (Bug
       #12079).
